--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ order: 1
 {% include menu.html %}
 {% include hero.html %}
 {% include cta1.html %}
+{% include info-section.html %}
+{% include testimonials.html %}
