added Clients Slider

--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@ order: 1
 {% include main-slider.html %}
 {% include home-about.html %}
 {% include features.html %}
+{% include testimonials.html %}
 {% include home-cta.html %}
