added services, updated contact email

--- a/services.html
+++ b/services.html
@@ -6,4 +6,6 @@ order: 2
 
 {% include header.html %}
 {% include page-title.html %}
+{% include services.html %}
+{% include pricing-table.html %}
 {% include home-cta.html %}
