Finished up kinda

--- a/about.html
+++ b/about.html
@@ -7,4 +7,5 @@ order: 2
 {% include header.html %}
 {% include page-title.html %}
 {% include about-content.html%}
+{% include recommended-partners.html %}
 {% include home-cta.html %}
